# midimon

./: .editorconfig  .gitignore  .llvm-cov.toml  .version-v0.1.0-monolithic  ARCHITECTURAL_PURITY_FIX_COMPLETE.md  ARCHITECTURE_PURITY_SUMMARY.md  BENCHMARKS.md  BENCHMARK_SUMMARY.md  BRANDING_ASSETS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPILER_WARNINGS_RESOLUTION.md  CONDUCTOR_REBRAND_PLAN.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.v0.1.0-backup  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  DEVICE_MANAGEMENT_IMPLEMENTATION.md  DOCUMENTATION_IMPROVEMENTS.md  DOCUMENTATION_STATUS_V2.2.md  FEEDBACK_MANAGER_IMPLEMENTATION.md  GOVERNANCE.md  GUI_REBUILD_INSTRUCTIONS.md  LED_FEEDBACK.md  LICENSE  LINEAR_UPDATE_CHECKLIST.md  LINEAR_UPDATE_COMPLETION_REPORT.md  LINEAR_UPDATE_V2.1_V2.2_RELEASES.md  LINEAR_UPDATE_V2.2.md  LINEAR_V2.3_COMPLETION.md  MAINTAINERS.md  MIDI_MSG_REFACTORING.md  MIDI_PARSING_ARCHITECTURE.md  MINOR_ISSUES_ANALYSIS.md  MINOR_ISSUES_FIXED.md  NOTICE  PERFORMANCE_ANALYSIS.md  (+58 more)
.github/: copilot-instructions.md  pull_request_template.md
.input/: base-template-ni-mikro-mk3.ncmm3
.research/: PHASE3_STATUS.md  implementation-viewpoint-1.md  implementation-viewpoint-2.md  phase3-completion-report.md  phase3-validation-report.md  phase3-validation-summary.md  phase4-completion-summary.md  v1.0.0-release-summary.md
conductor-core/: Cargo.toml  nonexistent_config_file_12345.toml
conductor-core/benches/: action_executor.rs  end_to_end.rs  event_processing.rs  mapping_engine.rs
conductor-core/examples/: test_from_midi_msg.rs
conductor-core/src/: error.rs  event_processor.rs  events.rs  gamepad_events.rs  lib.rs  logging.rs  mapping.rs  midi_feedback.rs  midi_output.rs  plugin_registry.rs  velocity.rs
conductor-core/src/config/: loader.rs  mod.rs
conductor-core/src/plugin/: action_plugin.rs  capability.rs  discovery.rs  loader.rs  mod.rs  signing.rs  trigger_plugin.rs  wasm_runtime.rs
conductor-core/tests/: api_integration_test.rs  backward_compat_test.rs  error_handling_test.rs  feedback_manager_test.rs  filesystem_capability_test.rs  gamepad_input_test.rs  input_event_tests.rs  obs_wasm_test.rs  plugin_signing_test.rs  resource_limiting_test.rs  send_midi_integration_test.rs  spotify_wasm_test.rs  wasm_plugin_integration_test.rs
conductor-daemon/: Cargo.toml
conductor-daemon/benches/: reload_benchmark.rs
conductor-daemon/docs/: phase-2-step-6-integration.md  phase-2-steps-6-7-summary.md
conductor-daemon/launchd/: com.amiable.conductor.plist
conductor-daemon/src/: action_executor.rs  conditions.rs  gamepad_device.rs  input_manager.rs  lib.rs  main.rs  main.rs.backup  midi_device.rs  plugin_manager.rs
conductor-daemon/src/daemon/: config_watcher.rs  engine_manager.rs  error.rs  menu_bar.rs  mod.rs  service.rs  types.rs
conductor-daemon/systemd/: conductor.service
conductor-daemon/tests/: device_commands_test.rs  ipc_security_test.rs  midi_integration_test.rs
conductor-gui/src-tauri/: Cargo.toml  tauri.conf.json
conductor-gui/src-tauri/src/: commands.rs  config_helpers.rs  main.rs  midi_learn.rs  plugin_commands.rs  state.rs
conductor-gui/src-tauri/templates/: flight-stick.toml  generic-keyboard-25.toml  switch-pro-controller.toml
conductor-gui/src-tauri/tests/: plugin_command_test.rs
examples/http-plugin/: Cargo.toml  README.md  plugin.toml
examples/http-plugin/src/: lib.rs
midimon-core/: Cargo.toml
midimon-core/benches/: action_executor.rs  end_to_end.rs  event_processing.rs  mapping_engine.rs
midimon-core/examples/: test_from_midi_msg.rs
midimon-core/src/: actions.rs  device.rs  engine.rs  error.rs  event_processor.rs  events.rs  feedback.rs  gamepad_events.rs  lib.rs  logging.rs  mapping.rs  midi_feedback.rs  midi_output.rs  mikro_leds.rs  plugin_registry.rs  velocity.rs
midimon-core/src/config/: loader.rs  mod.rs  types.rs
midimon-core/src/plugin/: action_plugin.rs  capability.rs  discovery.rs  loader.rs  metadata.rs  mod.rs  signing.rs  wasm_runtime.rs
midimon-core/tests/: api_integration_test.rs  backward_compat_test.rs  error_handling_test.rs  feedback_manager_test.rs  filesystem_capability_test.rs  gamepad_input_test.rs  input_event_tests.rs  obs_wasm_test.rs  plugin_signing_test.rs  resource_limiting_test.rs  send_midi_integration_test.rs  spotify_wasm_test.rs  wasm_plugin_integration_test.rs
midimon-daemon/: Cargo.toml
midimon-daemon/benches/: reload_benchmark.rs
midimon-daemon/docs/: midimon.1  midimonctl.1
midimon-daemon/launchd/: com.amiable.midimon.plist
midimon-daemon/src/: action_executor.rs  action_executor.rs.bak  conditions.rs  gamepad_device.rs  input_manager.rs  lib.rs  main.rs  main.rs.phase2.backup  midi_device.rs  plugin_manager.rs
midimon-daemon/src/daemon/: config_watcher.rs  engine_manager.rs  error.rs  ipc.rs  menu_bar.rs  mod.rs  service.rs  state.rs  types.rs
midimon-daemon/systemd/: midimon.service
midimon-daemon/tests/: device_commands_test.rs  ipc_security_test.rs  midi_integration_test.rs  midi_simulator.rs
midimon-gui/src-tauri/: Cargo.toml  tauri.conf.json
midimon-gui/src-tauri/capabilities/: default.json
midimon-gui/src-tauri/src/: app_detection.rs  commands.rs  config_helpers.rs  device_templates.rs  events.rs  lib.rs  main.rs  menu_bar.rs  midi_learn.rs  plugin_commands.rs  profile_manager.rs  state.rs
midimon-gui/src-tauri/templates/: apc-mini.toml  beatstep.toml  hotas.toml  launchpad-mini.toml  maschine-mikro-mk3.toml  nanokontrol2.toml  playstation-controller.toml  racing-wheel.toml  xbox-controller.toml
midimon-gui/src-tauri/tests/: plugin_command_test.rs
plugins/conductor-obs-plugin/: Cargo.toml
plugins/conductor-spotify-plugin/: Cargo.toml
plugins/midimon-obs-plugin/: Cargo.toml  README.md
plugins/midimon-obs-plugin/src/: lib.rs
plugins/wasm-minimal-no-wasi/: Cargo.toml
plugins/wasm-minimal-no-wasi/src/: lib.rs
plugins/wasm-spotify/: Cargo.toml  README.md
plugins/wasm-spotify/src/: lib.rs
plugins/wasm-template/: .gitignore  Cargo.toml  Makefile  README.md  plugin.toml
plugins/wasm-template/src/: lib.rs
(+335 files in other folders)
