[package]
name = "midimon-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MIDIMon core MIDI mapping engine (UI-independent)"

[lib]
name = "midimon_core"
path = "src/lib.rs"

[dependencies]
# Core engine dependencies
midir.workspace = true
enigo.workspace = true
serde.workspace = true
toml.workspace = true
hidapi.workspace = true
quick-xml.workspace = true
crossbeam-channel.workspace = true
thiserror.workspace = true
rand.workspace = true

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true

[features]
default = []
test-mocks = []
