[package]
name = "midimon-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MIDIMon core MIDI mapping engine (UI-independent)"

[lib]
name = "midimon_core"
path = "src/lib.rs"

[dependencies]
# Core engine dependencies
midir.workspace = true
enigo.workspace = true
serde.workspace = true
toml.workspace = true
hidapi.workspace = true
quick-xml.workspace = true
crossbeam-channel.workspace = true
thiserror.workspace = true
rand.workspace = true

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "event_processing"
harness = false

[[bench]]
name = "mapping_engine"
harness = false

[[bench]]
name = "action_executor"
harness = false

[[bench]]
name = "end_to_end"
harness = false

[features]
default = []
test-mocks = []
