[package]
name = "midimon-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MIDIMon CLI daemon and diagnostic tools"

[[bin]]
name = "midimon"
path = "src/main.rs"

# Diagnostic tools
[[bin]]
name = "midi_diagnostic"
path = "src/bin/midi_diagnostic.rs"

[[bin]]
name = "led_diagnostic"
path = "src/bin/led_diagnostic.rs"

[[bin]]
name = "led_tester"
path = "src/bin/led_tester.rs"

[[bin]]
name = "pad_mapper"
path = "src/bin/pad_mapper.rs"

[[bin]]
name = "test_midi"
path = "src/bin/test_midi.rs"

[[bin]]
name = "midi_simulator"
path = "src/bin/midi_simulator.rs"

[[bin]]
name = "midimonctl"
path = "src/bin/midimonctl.rs"

# Menu bar service
[[bin]]
name = "midimon-menubar"
path = "src/bin/midimon_menubar.rs"

[[bench]]
name = "reload_benchmark"
path = "benches/reload_benchmark.rs"
harness = false

[dependencies]
# Core engine
midimon-core = { path = "../midimon-core" }

# CLI dependencies
colored.workspace = true
chrono.workspace = true
ctrlc.workspace = true
clap.workspace = true

# MIDI I/O and threading
midir.workspace = true
crossbeam-channel.workspace = true

# HID device access (for LED diagnostic tools)
hidapi.workspace = true

# Async runtime and utilities
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# IPC and file watching
interprocess = "2.2"
notify = "7.0"
notify-debouncer-full = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# System integration
tray-icon = "0.19"
dirs = "5.0"

# Platform-specific dependencies for menu bar
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"

[dev-dependencies]
rstest.workspace = true
tempfile = "3.8"
