[package]
name = "conductor-gui"
version.workspace = true
description = "Conductor - Visual Configuration Interface"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "conductor_gui"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "conductor-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }

# Conductor core integration
conductor-core = { path = "../../conductor-core", features = ["plugin", "plugin-registry"] }
conductor-daemon = { path = "../../conductor-daemon" }

# MIDI I/O
midir = "0.10"
midi-msg.workspace = true

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# macOS app detection
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[dev-dependencies]
tempfile = "3.0"

[features]
default = ["custom-protocol", "plugin-registry"]
custom-protocol = ["tauri/custom-protocol"]
plugin-registry = ["conductor-core/plugin-registry"]
