[package]
name = "midimon-gui"
version = "2.0.0"
description = "MIDIMon - Visual Configuration Interface"
authors = ["MIDIMon Contributors"]
edition = "2024"
license = "MIT"

[lib]
name = "midimon_gui"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "midimon-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# MIDIMon core integration
midimon-core = { path = "../../midimon-core" }
midimon-daemon = { path = "../../midimon-daemon" }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
