[package]
name = "conductor-wasm-minimal-no-wasi"
version = "0.1.0"
edition = "2021"

[workspace]
# Empty workspace to exclude from parent workspace

[lib]
crate-type = ["cdylib"]

[dependencies]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = "abort"     # Abort on panic
strip = true        # Strip symbols
