[package]
name = "conductor-wasm-plugin-template"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM-specific allocator (smaller binary size)
wee_alloc = { version = "0.4", optional = true }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
strip = true        # Strip symbols
codegen-units = 1   # Single codegen unit for better optimization

[features]
default = []
wee_alloc_support = ["wee_alloc"]
